THIRD??? MAJOR COMMIT

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -38,6 +38,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="triangulation_files/libs/quarto-contrib/intersection-observer-polyfill-1.0.0/intersection-observer.js"></script>
 <script src="triangulation_files/libs/quarto-contrib/scrollama-3.2.0/scrollama.min.js"></script>
 <script src="triangulation_files/libs/quarto-contrib/closeread-0.1.0/closeread.js"></script>
+<link href="triangulation_files/libs/quarto-contrib/social-share-1.0.0/social-share.css" rel="stylesheet">
+<link href="triangulation_files/libs/quarto-contrib/social-share-1.0.0/all.min.css" rel="stylesheet">
 <meta cr-debug-mode="false">
 <meta cr-remove-header-space="false">
 
@@ -83,10 +85,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
---cr-narrative-background-color-overlay: grey;
+          --cr-section-background-color: white;
 --cr-narrative-text-color-sidebar: black;
---cr-section-background-color: white;
+--cr-narrative-background-color-sidebar: white;
+--cr-narrative-background-color-overlay: grey;
         }
       </style>
     
@@ -180,7 +182,7 @@ window.Quarto = {
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
 <div class="narrative">
-<p>These findings highlight the usefulness of using advanced quantitative methods when presented with data from multiple reporters, along with the usefulness of self-reports.</p>
+<p>These findings highlight the usefulness of using advanced quantitative methods when presented with data from multiple reporters, along with the importance and validity of self-reports.</p>
 </div>
 </div>
 </div>
@@ -725,6 +727,7 @@ window.Quarto = {
   });
   </script>
 </div> <!-- /content -->
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://www.linkedin.com/shareArticle?url=https://agrogan1.github.io/closeread/triangulation/triangulation.html&amp;title=Triangulation of Child Abuse Reports" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=Triangulation of Child Abuse Reports&amp;body=Check out this link:https://agrogan1.github.io/closeread/triangulation/triangulation.html" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://agrogan1.github.io/closeread/triangulation/triangulation.html" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://agrogan1.github.io/closeread/triangulation/triangulation.html&amp;title=Triangulation of Child Abuse Reports" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=Triangulation of Child Abuse Reports https://agrogan1.github.io/closeread/triangulation/triangulation.html'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a><a href="https://bsky.app/intent/compose?text=https://agrogan1.github.io/closeread/triangulation/triangulation.html Triangulation of Child Abuse Reports" target="_blank" class="bsky"><i class="fa-brands fa-bluesky"></i></a></div></div>
 
 
 
