cropped triangle image

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -85,10 +85,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
+          --cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
+--cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
---cr-narrative-background-color-overlay: grey;
         }
       </style>
     
@@ -120,7 +120,7 @@ window.Quarto = {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
+<div class="trigger new-trigger" data-scale-by=".45" data-focus-on="cr-child-maltreatment">
 <section id="background" class="level1 narrative">
 <h1>Background</h1>
 </section>
@@ -138,7 +138,7 @@ window.Quarto = {
 <p>However, it remains unclear how best to operationalize this concept.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-triangle" data-scale-by=".5">
+<div class="trigger new-trigger" data-scale-by=".5" data-focus-on="cr-triangle">
 <section id="objective" class="level1 narrative">
 <h1>Objective</h1>
 <p>This study examines the concept of “triangulation” by employing different advanced analytic methods to determine whether these methods reveal a common underlying construct of physical abuse and whether they predict adult depression.</p>
@@ -164,7 +164,7 @@ window.Quarto = {
 <p>Adult self-reports played a particularly strong role.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-network-analysis" data-scale-by=".75">
+<div class="trigger new-trigger" data-scale-by=".75" data-focus-on="cr-network-analysis">
 <div class="narrative">
 <p>Network analysis also highlighted strong intercorrelations among self-reports and meaningful links with depression.</p>
 </div>
@@ -175,12 +175,12 @@ window.Quarto = {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-scale-by=".75" data-focus-on="cr-network-analysis" data-pan-to="-45%,-25%">
+<div class="trigger new-trigger" data-focus-on="cr-network-analysis" data-scale-by=".75" data-pan-to="-45%,-25%">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
+<div class="trigger new-trigger" data-scale-by=".45" data-focus-on="cr-child-maltreatment">
 <div class="narrative">
 <p>These findings highlight the usefulness of using advanced quantitative methods when presented with data from multiple reporters, along with the importance and validity of self-reports.</p>
 </div>
