better figure labels; mobile layout still doesn't work :-0

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -112,9 +112,9 @@ window.Quarto = {
       <style>
         :root {
           --cr-section-background-color: white;
---cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: grey;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -201,7 +201,7 @@ window.Quarto = {
 <p>Adult self-reports played a particularly strong role.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-network-analysis" data-scale-by=".75">
+<div class="trigger new-trigger" data-focus-on="cr-network-analysis">
 <div class="narrative">
 <p>Network analysis also highlighted strong intercorrelations among self-reports and meaningful links with depression.</p>
 </div>
@@ -212,7 +212,7 @@ window.Quarto = {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis" data-scale-by="1.0">
+<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis-2" data-scale-by="1.0">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
@@ -229,18 +229,26 @@ window.Quarto = {
 <p><img src="child-maltreatment.png" class="img-fluid"></p>
 </div>
 <div id="cr-multiple-measures" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="multiple-measures.png" class="img-fluid figure-img"></p>
-<figcaption>multiple measures from multiple reporters</figcaption>
+<div id="fig-multiple-measures" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-multiple-measures-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="multiple-measures.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-multiple-measures-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;1: multiple measures from multiple reporters
+</figcaption>
 </figure>
 </div>
 </div>
 <div id="cr-triangle" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="triangle.png" class="img-fluid figure-img"></p>
-<figcaption>triangulation</figcaption>
+<div id="fig-triangulation" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-triangulation-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="triangle.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-triangulation-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;2: triangulation
+</figcaption>
 </figure>
 </div>
 </div>
@@ -260,97 +268,163 @@ window.Quarto = {
 <p><span id="eq-additive"><span class="math display">\[\text{outcome} = \beta_0 + \beta \text{reporter count} + \Sigma \beta \text{covariates} + e_i \tag{5}\]</span></span></p>
 </div>
 <div id="cr-Lehigh-study" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide1.png" class="img-fluid figure-img"></p>
-<figcaption>structure of the Lehigh Study</figcaption>
+<div id="fig-Lehigh-Study" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Lehigh-Study-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide1.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Lehigh-Study-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;3: structure of the Lehigh Study
+</figcaption>
 </figure>
 </div>
 </div>
 <div id="cr-multiple-methods" class="scale-to-fill sticky">
-<div class="quarto-layout-panel" data-layout-ncol="3">
+<div id="fig-multiple-methods" class="quarto-layout-panel">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-multiple-methods-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide7.png" class="img-fluid figure-img"></p>
-<figcaption>network analysis</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-network" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-network-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide7.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-network-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a) network analysis
+</figcaption>
 </figure>
 </div>
 </div>
-<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide2.png" class="img-fluid figure-img"></p>
-<figcaption>ordinary least squares regression</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-OLS" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-OLS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide2.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-OLS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b) ordinary least squares regression
+</figcaption>
 </figure>
 </div>
 </div>
-<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide5.png" class="img-fluid figure-img"></p>
-<figcaption>structural equation modeling</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-SEM" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-SEM-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide5.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-SEM-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(c) structural equation modeling
+</figcaption>
 </figure>
 </div>
 </div>
 </div>
 <div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide6.png" class="img-fluid figure-img"></p>
-<figcaption>latent profile analysis</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-LPA" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-LPA-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide6.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-LPA-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(d) latent profile analysis
+</figcaption>
 </figure>
 </div>
 </div>
-<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="cumulative.png" class="img-fluid figure-img"></p>
-<figcaption>cumulative index regression</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-cumulative" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-cumulative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="cumulative.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-cumulative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(e) cumulative index regression
+</figcaption>
 </figure>
 </div>
 </div>
 </div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-multiple-methods-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;4: multiple analytic approaches
+</figcaption>
+</figure>
 </div>
 </div>
 <div id="cr-SEM" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide5.png" class="img-fluid figure-img"></p>
-<figcaption>structural equation modeling</figcaption>
+<div id="fig-SEM-2" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-SEM-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide5.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-SEM-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;5: structural equation modeling
+</figcaption>
 </figure>
 </div>
 </div>
-<div id="cr-network-analysis" class="sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide7.png" class="img-fluid figure-img"></p>
-<figcaption>network analysis</figcaption>
+<div id="cr-network-analysis" class="scale-to-fill sticky">
+<div id="fig-network-2" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-network-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide7.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-network-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;6: network analysis
+</figcaption>
 </figure>
 </div>
 </div>
 <div id="cr-SEM-network-analysis" class="scale-to-fill sticky">
-<div class="quarto-layout-panel" data-layout-ncol="2">
+<div id="fig-most-informative" class="quarto-layout-panel">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-most-informative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide5.png" class="img-fluid figure-img"></p>
-<figcaption>structural equation modeling</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-most-informative" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="fig-SEM-3" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-SEM-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide5.png" class="img-fluid figure-img" data-ref-parent="fig-most-informative">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-SEM-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a) structural equation modeling
+</figcaption>
 </figure>
 </div>
 </div>
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Slide7.png" class="img-fluid figure-img"></p>
-<figcaption>network analysis</figcaption>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-most-informative" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="fig-network-3" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-network-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide7.png" class="img-fluid figure-img" data-ref-parent="fig-most-informative">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-network-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b) network analysis
+</figcaption>
 </figure>
 </div>
 </div>
 </div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-most-informative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;7: most informative analytic approaches
+</figcaption>
+</figure>
+</div>
+</div>
+<div id="cr-network-analysis-2" class="sticky">
+<div id="fig-network-2" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-network-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide7.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-network-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;8: network analysis
+</figcaption>
+</figure>
 </div>
 </div>
 </div>
