--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Sunghyun Hong">
 <meta name="author" content="Olivia Chang">
 <meta name="author" content="Todd Herrenkohl">
-<meta name="dcterms.date" content="2025-12-26">
+<meta name="dcterms.date" content="2025-12-27">
 
 <title>Squaring the Circle: Is Triangulation of Child Abuse Reports Helpful?</title>
 <style>
@@ -112,9 +112,9 @@ window.Quarto = {
       <style>
         :root {
           --cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
---cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-overlay: grey;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -143,7 +143,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 26, 2025</p>
+      <p class="date">December 27, 2025</p>
     </div>
   </div>
   
@@ -212,7 +212,7 @@ window.Quarto = {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis-2" data-scale-by="1.0">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-network-analysis-2" data-pan-to="-55%,-15%">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
