added callout caution that images don't display on mobile devices.

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -111,10 +111,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
---cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-overlay: grey;
+          --cr-narrative-background-color-overlay: grey;
+--cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -155,17 +155,26 @@ window.Quarto = {
 </header>
 
 
+<div class="callout callout-style-default callout-caution callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Caution
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>If viewed on a mobile device, only the text, but not the images, will display.</p>
+</div>
+</div>
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
 <div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
 <section id="background" class="level1 narrative">
 <h1>Background</h1>
-</section>
-</div>
-<div class="trigger">
-<div class="narrative">
 <p>The measurement of child maltreatment has been a longstanding issue.</p>
-</div>
+</section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-multiple-measures">
 <div class="narrative">
@@ -212,7 +221,7 @@ window.Quarto = {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-network-analysis-2" data-pan-to="-55%,-15%">
+<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis-2" data-scale-by="1.0">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
